# linearFEM

./: .gitignore  CMakeLists.txt  README.md  linearMassMatrix.txt  quadMassMatrix.txt
Houdini/: visualize.hipnc
Houdini/backup/: visualize_bak2.hipnc  visualize_bak4.hipnc  visualize_bak6.hipnc  visualize_bak7.hipnc  visualize_bak8.hipnc
data/l2q/test/: linearFrame250E18000.txt
data/linear/: linearFrame250E10000.txt  linearFrame250E100000.txt  linearFrame250E105000.txt  linearFrame250E15000.txt  linearFrame250E2000.txt  linearFrame250E3000.txt  linearFrame250E30000.txt  linearFrame250E4000.txt  linearFrame250E40000.txt  linearFrame250E4500.txt  linearFrame250E45000.txt  linearFrame250E5000.txt  linearFrame250E50000.txt  linearFrame250E55000.txt  linearFrame250E6000.txt  linearFrame250E6500.txt  linearFrame250E7000.txt  linearFrame250E75000.txt  linearFrame250E85000.txt  linearFrame250E9000.txt  linearFrame250E95000.txt
data/linear/origin/: linearFrame250E15000.txt
data/linear/test/: linearFrame250E27000.txt  linearFrame250E82000.txt  linearFrame250E8300.txt
data/linear/training/: linearFrame250E1000.txt  linearFrame250E1500.txt  linearFrame250E20000.txt  (+14 more)
data/quad/: quadFrame250E10000.txt  quadFrame250E15000.txt  quadFrame250E20000.txt
output/: frame0.bgeo
python/: CVAEcuda.py  linearFEM_CVAE(l2l).py  linearFEM_CVAE(l2q)  linearFEM_CVAE.py  mymodel_cuda  plot.py
python/examples/: example_CVAE.py  models.py  mymodel.py  optimizers.py
src/: CMakeLists.txt  FemQuadSim.cpp  FemQuadSim.h  FemSimulation.cpp  FemSimulation.h  linearFEM  main.cpp
(+3 files in other folders)
